--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaundryWeb</title>
+    <style>
+        body{
+            margin:0px;
+        }
+        .brand{
+            float: right;
+        }
+        .logo{
+            width: 20px;
+            height:20px;
+            border-radius: 50%;
+            float: right;
+        }
+        .top{
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        .top a{
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            margin: 0px;
+            padding: 14px 16px;
+            font-size: 17px;
+        }
+
+        .top a:hover{
+            background-color: #ddd;
+            color:black
+        }
+    </style>
 </head>
 <body>
-    <p>Hello</p>
-    <p>This is my first project</p>
+    <nav class="top">
+        <a>Home</a>
+        <a>About</a>
+        <a>Dashboard</a>
+        <div class="brand">
+            <a class="logo"><img src="images/Laundry-Logo.jpg"></a>
+        </div>
+        
+    </nav>
 </body>
 </html>
