--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a>About</a>
         <a>Dashboard</a>
         <div class="brand">
-            <a class="logo"><img src="images/Laundry-Logo.jpg"></a>
+            <button class="logo"><img src="images/Laundry-Logo.jpg"></button>
         </div>
         
     </nav>
