--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
         }
         .brand{
             float: right;
+            padding-right: 10px;
         }
-        .logo{
-            width: 20px;
-            height:20px;
-            border-radius: 50%;
-            float: right;
-        }
+        
         .top{
             overflow: hidden;
             background-color: #333;
+        }
+        #logo img{
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            padding: 0px;
+            margin: 0px;
+        }
+        #logo{
+            padding: 0px;
+            margin: 0px;
         }
 
         .top a{
@@ -43,7 +50,7 @@
         <a>About</a>
         <a>Dashboard</a>
         <div class="brand">
-            <a class="logo"><img src="images/Laundry-Logo.jpg"></a>
+            <a id="logo"><img src="images/Laundry-Logo.jpg"></a>
         </div>
         
     </nav>
